--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>Typing Test</title>
   </head>
   <body>
