--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,22 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Typing Test</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="https://kit.fontawesome.com/ca29e3992b.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/ca29e3992b.js"
+      crossorigin="anonymous"
+    ></script>
     <div id="root"></div>
   </body>
 </html>
